src/Components/Intro/Intro.css
.intro{
  display: flex;
  height: 77vh;
  margin-top: 6rem;
}

.i-left{
  display: flex;
  position: relative;
  flex:1;
  flex-direction: column;
  gap: 2rem; 
  /* gap in every element */
}

.i-name{
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.i-name>:nth-child(1){
  color: var(--orange);
  font-weight: bold;
  font-size: 2rem;
}

.i-name>:nth-child(2){
  color: var(--black);
  font-weight: bold;
  font-size: 2rem;
}

.i-name>:nth-child(3){
  font-weight: 100;
  font-size: 18px;
  color: var(--gray);
  margin-top: 10px;
}

.i-button{
  width: 6rem;
  height: 2rem;
}

.i-icons{
  margin-top: 2rem;
  display: flex;
  gap: 0rem;
}

/* all imgs in icons >>> "*" */
/* scale them half of the actual size */
.i-icons>*{
  transform: scale(0.5);
  background: transparent;
  border-radius: 20px;
  box-shadow: var(--boxShadow);
}

.i-icons>*:hover{
  cursor: pointer;
  box-shadow: 12px 12px 2px 1px var(--darkPink);
  
}

.i-right {
  flex: 1;
  position: relative;
}

/* all the elements of i-right */
.i-right > * {
  position: absolute;
  z-index: 1;
}

.i-right > :nth-child(1) {
  transform: scale(0.80);
  left: -15%;
  top: -15%;
}

.blur {
  position: absolute;
  width: 8rem;
  height: 7rem;
  border-radius: 50%;
  z-index: 0;
  top: -18%;
  filter: blur(100px);
}

@media screen and (max-width: 480px) {
  .intro{
    flex-direction: column;
    height: 30rem;
    gap: 1rem;
  }

  .i-icons{
    margin-top: -5rem;
    justify-content: flex-end;
  }

  .i-icons>*{
    transform: scale(0.5);
    background: transparent;
    border-radius: 20px;
    box-shadow: 12px 12px 2px 1px var(--darkPink);
  }
  
  .i-right{
    margin-top: -4rem;
    transform: scale(0.5);
    left: -2rem;
  }

  .i-right .blur{
    display: none;
  }

  .floating-div:nth-of-type(1){
    top: -3rem !important;
  }
}

/* ipad portrait  */
@media only screen 
  and (min-device-width: 480px) 
  and (max-device-width: 1024px)
  and (orientation: portrait)  
  and (-webkit-min-device-pixel-ratio: 1) {

    .intro{
      height: 50vh;
    }

    .i-right > :nth-child(1) {
      transform: scale(0.50);
      left: -50%;
      top: -15%;
    }
}

/* landscape */

@media only screen 
  and (min-device-width: 768px) 
  and (max-device-width: 1024px) 
  and (orientation: landscape) 
  and (-webkit-min-device-pixel-ratio: 1) {

    .intro{
      height: 80vh;
    }

    .i-icons{
      margin-top: 0rem;
      display: flex;
      gap: 0rem;
    }

    .i-icons>*{
      transform: scale(0.4);
      background: transparent;
      border-radius: 20px;
      box-shadow: 12px 12px 2px 1px var(--darkPink);
    }

    .i-right{
      margin-top: -4rem;
      transform: scale(0.8);
      left: -2rem;
    }

}

